updated the index.html file to work in github

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>About Me</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="C:\Users\nickp\Documents\Bootcamp\Course4\Week1\Homework1\Portfolio\assets\css\style.css">
     <style>
     body {
         text-align: center;
@@ -19,7 +19,7 @@
         <header>
            <div class="topnav">
                 <a class="active" href="mailto:nickpoly48@gmail.com?Subject=Hello%20again" target="_top">Email</a>
-                <a href="https://github.com/nickpoly48/Student-Bio" target="_blank">Github</a>
+                <a href="https://github.com/nickpoly48" target="_blank">Github</a>
                 <a href="#" target="_blank">Portfolio</a>
            </div> 
         </header>
@@ -28,7 +28,7 @@
 
             <section id="main-bio">
 
-                <img src="nick1.jpeg" height="300px"  alt="Nicholas Policastro" id="bio-image">
+                <img src="C:\Users\nickp\Documents\Bootcamp\Course4\Week1\Homework1\Portfolio\assets\images\uniform.jpeg" height="300px"  alt="Nicholas Policastro" id="bio-image">
 
                 <p>I started my technology career when I joined the Army National Guard in 2008. <br>From that experience I have transitioned into doing contract work in Military Installations for a highly efficient and well respected Network Cable and Install Team.</p>
             </section>
