updated path to image

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
 
             <section id="main-bio">
 
-                <img src="C:\Users\nickp\Documents\Bootcamp\Course4\Week1\Homework1\Portfolio\assets\images\uniform.jpeg" height="300px"  alt="Nicholas Policastro" id="bio-image">
+                <img src="assets/images/uniform.jpeg" height="300px"  alt="Nicholas Policastro" id="bio-image">
 
                 <p>I started my technology career when I joined the Army National Guard in 2008. <br>From that experience I have transitioned into doing contract work in Military Installations for a highly efficient and well respected Network Cable and Install Team.</p>
             </section>
