--- a/portfolio.html
+++ b/portfolio.html
@@ -2,18 +2,7 @@
 <html>
     <head>
         <title>About Me</title>
-    <link rel="stylesheet" type="text/css" href="C:\Users\nickp\Documents\Bootcamp\Course4\Week1\Homework1\Portfolio\assets\css\style.css">
-    <style>
-    body {
-        text-align: center;
-    }
-    li {
-        column-span: none;
-    }
-    img {
-        border-radius: 50%;
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body style="background-color:lightslategray;">
         <header>
